k8s/deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receiptsnap-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: receiptsnap-backend
  template:
    metadata:
      labels:
        app: receiptsnap-backend
    spec:
      containers:
        - name: backend
          image: pratik50/receiptsnap-backend:latest
          ports:
            - containerPort: 8080
