k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receiptsnap-backend-svc
  namespace: backend-team
spec:
  selector:
    app: receiptsnap-backend      
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
