k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: receiptsnap-ingress
  namespace: backend-team
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: receiptsnap.local        # local testing 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: receiptsnap-backend-svc
                port:
                  number: 80
  defaultBackend:
    service:
      name: receiptsnap-backend-svc
      port:
        number: 80
